# bb-private-kitchen

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bb-private-kitchen.service  cleanup_images.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  seed_db.py  tailwind.config.js
.github/workflows/: ci.yml
.loki/: CONTINUITY.md
.loki/specs/: PRD.md  TECH_STACK.md  schema.sql
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_dish_category.py  003_add_indexes.py  004_add_order_item_rating.py
app/: ai_client.py  config.py  crud.py  csrf.py  database.py  dependencies.py  gemini_client.py  main.py  models.py  rate_limit.py  recipe_utils.py  schemas.py  security.py
app/routers/: admin.py  auth.py  dishes.py  history.py  orders.py  recipes.py  settings.py
docs/: optimization-plan.md  style-optimization-prd.md  ui-ux-optimization-prd.md
host/: agy-proxy.service  agy_proxy.py  gemini-proxy.service  gemini_proxy.py  pyproject.toml  setup.sh
static/css/: app.css  tailwind.min.css
templates/: _recipe_content.html  _recipe_form_fields.html  admin.html  base.html  dish_detail_modal.html  error.html  history.html  index.html  login.html  my_orders.html  order.html  recipe_modal.html  settings.html  shopping_list.html  users.html
tests/: conftest.py  test_auth.py  test_crud.py  test_csrf.py  test_history.py  test_idempotency.py  test_orders.py  test_pagination.py  test_preferences.py  test_recipes.py  test_security.py  test_ui_refinement.py  test_users.py
