[project]
name = "bb-private-kitchen"
version = "0.1.0"
description = "宝宝的私房菜馆 - Family ordering system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0.27",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "bcrypt>=4.1.2",
    "aiofiles>=23.2.1",
    "pillow>=10.2.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
